--- a/cafe.html
+++ b/cafe.html
@@ -219,27 +219,65 @@ Error message and password prompt
 
 <li>$:/state/tab/sidebar--595412856</li>
 
+<li>$:/state/tab2--1311305590</li>
+
+<li>$:/state/tab2-1422387773</li>
+
+<li>$:/state/tab2-2058192071</li>
+
+<li>$:/state/tab2-791620041</li>
+
+<li>$:/state/tab2-83316253</li>
+
 <li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
+
+<li>$:/state/toc/android-edoc--1150316071</li>
+
+<li>$:/state/toc/code-android-217132970</li>
 
 <li>$:/state/toc/code-java--704401339</li>
 
 <li>$:/state/toc/CodeCafe-задачи--619712481</li>
 
+<li>$:/state/toc/CodeCafe-задачи-550923719</li>
+
 <li>$:/state/toc/CodeCafe-разное--619712481</li>
+
+<li>$:/state/toc/CodeCafe-разное-550923719</li>
+
+<li>$:/state/toc/CodeCafe-спецификация--619712481</li>
+
+<li>$:/state/toc/CodeCafe-спецификация-550923719</li>
 
 <li>$:/state/toc/CodeCafe-code--619712481</li>
 
+<li>$:/state/toc/CodeCafe-code-550923719</li>
+
 <li>$:/state/toc/CodeCafe-info--619712481</li>
 
+<li>$:/state/toc/CodeCafe-info-550923719</li>
+
+<li>$:/state/toc/CodeCafe-meri--619712481</li>
+
+<li>$:/state/toc/CodeCafe-meri-550923719</li>
+
 <li>$:/state/toc/CodeCafe-projects--619712481</li>
+
+<li>$:/state/toc/CodeCafe-projects-550923719</li>
 
 <li>$:/state/toc/CodeCafe/задачи-LHD-RV-задачи--619712481</li>
 
 <li>$:/state/toc/CodeCafe/code-android--619712481</li>
 
+<li>$:/state/toc/CodeCafe/code-android-550923719</li>
+
 <li>$:/state/toc/CodeCafe/code-java--619712481</li>
 
+<li>$:/state/toc/CodeCafe/code-java-550923719</li>
+
 <li>$:/state/toc/CodeCafe/code/android-edoc--619712481</li>
+
+<li>$:/state/toc/CodeCafe/code/android-edoc-550923719</li>
 
 <li>$:/state/toc/CodeCafe/projects-LHD-RV--619712481</li>
 
@@ -273,6 +311,8 @@ Error message and password prompt
 
 <li>разное</li>
 
+<li>Смена пароля Meri</li>
+
 <li>спецификация</li>
 
 <li>Чтение данных с eDocViewer</li>
@@ -287,7 +327,11 @@ Error message and password prompt
 
 <li>Coffee1.jpg</li>
 
+<li>CoffeeTabs</li>
+
 <li>edoc</li>
+
+<li>Home</li>
 
 <li>info</li>
 
@@ -300,6 +344,8 @@ Error message and password prompt
 <li>LHD-RV микроконтроллер</li>
 
 <li>LHD-RV: дампы памяти</li>
+
+<li>meri</li>
 
 <li>projects</li>
 
@@ -10207,9 +10253,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210601143655876" modified="20210601143655876" title="$:/DefaultTiddlers">
-<pre>CodeCafe
-</pre>
+<div created="20210601143655876" modified="20210602135804166" title="$:/DefaultTiddlers">
+<pre>Home</pre>
 </div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
@@ -11431,7 +11476,7 @@ Error message and password prompt
 <div created="20210601144924436" modified="20210601144924436" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
-<div created="20210601151723372" modified="20210601151726083" title="$:/state/sidebar">
+<div created="20210601151723372" modified="20210602105048957" title="$:/state/sidebar">
 <pre>yes</pre>
 </div>
 <div created="20210601142207076" modified="20210601145309748" title="$:/state/tab--1418380610">
@@ -11446,14 +11491,35 @@ Error message and password prompt
 <div created="20210601141845283" modified="20210601151913507" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20210601141843923" modified="20210601151853067" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Plugins</pre>
+<div created="20210601141843923" modified="20210602135801077" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20210601142236932" modified="20210601142504091" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Recent</pre>
+<div created="20210601142236932" modified="20210602141448604" title="$:/state/tab/sidebar--595412856">
+<pre>CodeCafe</pre>
+</div>
+<div created="20210602141535668" modified="20210602141536996" title="$:/state/tab2--1311305590">
+<pre>android</pre>
+</div>
+<div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
+<pre>LHD-RV: дампы памяти</pre>
+</div>
+<div created="20210602141529428" modified="20210602141539996" title="$:/state/tab2-2058192071">
+<pre>projects</pre>
+</div>
+<div created="20210602140111908" modified="20210602140113316" title="$:/state/tab2-791620041">
+<pre>LHD-RV микроконтроллер</pre>
+</div>
+<div created="20210602140629276" modified="20210602141328532" title="$:/state/tab2-83316253">
+<pre>задачи</pre>
 </div>
 <div created="20210601142416283" modified="20210601142421779" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/PageControls</pre>
+</div>
+<div created="20210602141537852" modified="20210602141539204" title="$:/state/toc/android-edoc--1150316071">
+<pre>close</pre>
+</div>
+<div created="20210602141246788" modified="20210602141247795" title="$:/state/toc/code-android-217132970">
+<pre>close</pre>
 </div>
 <div created="20210601143550988" modified="20210601143550988" title="$:/state/toc/code-java--704401339">
 <pre>open</pre>
@@ -11461,16 +11527,43 @@ Error message and password prompt
 <div created="20210601144245028" modified="20210601144245028" title="$:/state/toc/CodeCafe-задачи--619712481">
 <pre>open</pre>
 </div>
+<div created="20210602140010876" modified="20210602140010876" title="$:/state/toc/CodeCafe-задачи-550923719">
+<pre>open</pre>
+</div>
 <div created="20210601150002588" modified="20210601151157852" title="$:/state/toc/CodeCafe-разное--619712481">
+<pre>open</pre>
+</div>
+<div created="20210602140013005" modified="20210602140530100" title="$:/state/toc/CodeCafe-разное-550923719">
+<pre>close</pre>
+</div>
+<div created="20210602135355709" modified="20210602135356412" title="$:/state/toc/CodeCafe-спецификация--619712481">
+<pre>close</pre>
+</div>
+<div created="20210602140525100" modified="20210602140525100" title="$:/state/toc/CodeCafe-спецификация-550923719">
 <pre>open</pre>
 </div>
 <div created="20210601143636204" modified="20210601143636204" title="$:/state/toc/CodeCafe-code--619712481">
 <pre>open</pre>
 </div>
+<div created="20210602140511548" modified="20210602140511548" title="$:/state/toc/CodeCafe-code-550923719">
+<pre>open</pre>
+</div>
 <div created="20210601150005324" modified="20210601150005324" title="$:/state/toc/CodeCafe-info--619712481">
 <pre>open</pre>
 </div>
+<div created="20210602140501356" modified="20210602140501356" title="$:/state/toc/CodeCafe-info-550923719">
+<pre>open</pre>
+</div>
+<div created="20210602110012702" modified="20210602110012702" title="$:/state/toc/CodeCafe-meri--619712481">
+<pre>open</pre>
+</div>
+<div created="20210602140500532" modified="20210602140500532" title="$:/state/toc/CodeCafe-meri-550923719">
+<pre>open</pre>
+</div>
 <div created="20210601143843964" modified="20210601143843964" title="$:/state/toc/CodeCafe-projects--619712481">
+<pre>open</pre>
+</div>
+<div created="20210602140009461" modified="20210602140009461" title="$:/state/toc/CodeCafe-projects-550923719">
 <pre>open</pre>
 </div>
 <div created="20210601144247060" modified="20210601151753059" title="$:/state/toc/CodeCafe/задачи-LHD-RV-задачи--619712481">
@@ -11479,10 +11572,19 @@ Error message and password prompt
 <div created="20210601151514811" modified="20210601151514811" title="$:/state/toc/CodeCafe/code-android--619712481">
 <pre>open</pre>
 </div>
+<div created="20210602140512900" modified="20210602140512900" title="$:/state/toc/CodeCafe/code-android-550923719">
+<pre>open</pre>
+</div>
 <div created="20210601143636980" modified="20210601143636980" title="$:/state/toc/CodeCafe/code-java--619712481">
 <pre>open</pre>
 </div>
+<div created="20210602140516580" modified="20210602140516580" title="$:/state/toc/CodeCafe/code-java-550923719">
+<pre>open</pre>
+</div>
 <div created="20210601151526483" modified="20210601151526483" title="$:/state/toc/CodeCafe/code/android-edoc--619712481">
+<pre>open</pre>
+</div>
+<div created="20210602140514548" modified="20210602140514548" title="$:/state/toc/CodeCafe/code/android-edoc-550923719">
 <pre>open</pre>
 </div>
 <div created="20210601144316364" modified="20210601144316364" title="$:/state/toc/CodeCafe/projects-LHD-RV--619712481">
@@ -11494,7 +11596,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="CodeCafe" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -11708,11 +11810,31 @@ Error message and password prompt
 * D:\mikron\trunk\src\debug\Ira\android\doc - моя документация
 * C:\dev\android\sdk-tools-windows-4333796 - SDK Tools</pre>
 </div>
-<div created="20210601144226077" modified="20210601144227020" tags="CodeCafe" title="задачи">
-<pre></pre>
+<div created="20210601144226077" modified="20210602141121149" tags="CodeCafe" title="задачи">
+<pre>
+&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'задачи'&gt;&gt;
+
+&lt;/div&gt;
+
+
+</pre>
 </div>
-<div created="20210601144335278" modified="20210601144400917" tags="CodeCafe" title="разное">
-<pre></pre>
+<div created="20210601144335278" modified="20210602141405837" tags="CodeCafe" title="разное">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'разное'&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20210602105858645" modified="20210602105956094" tags="meri" title="Смена пароля Meri">
+<pre>Смена пароля
+`mobaXterm`:
+
+слева в списке пункт: `mikton-term-04` 
+
+логин: `niime/irpopova`</pre>
 </div>
 <div created="20210601145115796" modified="20210601145128452" tags="CodeCafe" title="спецификация">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
@@ -11765,30 +11887,51 @@ Error message and password prompt
 <div created="20210601142528406" modified="20210602081307766" tags="разное" title="Chandra - assembly" type="">
 <pre>&lt;iframe src=&quot;../chandra/index.html&quot; style=&quot;width:100%; height:700px;&quot;&gt;&lt;/iframe&gt;</pre>
 </div>
-<div created="20210601143541444" modified="20210601143614444" tags="CodeCafe" title="code">
-<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+<div created="20210601143541444" modified="20210602141319492" tags="CodeCafe" title="code">
+<pre>&lt;div class=&quot;zetab_inner&quot;&gt;
 
-&lt;&lt;toc-selective-expandable 'code'&gt;&gt;
+&lt;&lt;tabs &quot;[tag[code]!nsort[title]]&quot; &quot;java&quot; &quot;$:/state/tab2&quot;  &quot;tc-vertical&quot;&gt;&gt;
 
-&lt;/div&gt;</pre>
+&lt;/div&gt;
+</pre>
 </div>
-<div created="20210601143629460" modified="20210602084701774" title="CodeCafe">
+<div created="20210601143629460" list-before="$:/core/ui/SideBar/More" modified="20210602135743070" tags="$:/tags/SideBar" title="CodeCafe">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'CodeCafe'&gt;&gt;
 
 &lt;/div&gt;
 
-[img[Coffee1.jpg]]</pre>
+</pre>
 </div>
 <div _canonical_uri="https://daidalvi.github.io/ja/images/coffee/1a52174bc1bf2efc5d19346faf890d38.jpg" created="20210602084606160" modified="20210602084650935" tags="eimg" title="Coffee1.jpg" type="image/jpeg">
 <pre></pre>
 </div>
+<div created="20210602135934884" modified="20210602141444045" tags="" title="CoffeeTabs">
+<pre>&lt;div class=&quot;zetab_inner&quot;&gt;
+
+&lt;&lt;tabs &quot;[tag[CodeCafe]!nsort[title]]&quot; &quot;projects&quot; &quot;$:/state/tab2&quot;&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
 <div created="20210601151453252" modified="20210601151454229" tags="android" title="edoc">
 <pre></pre>
 </div>
-<div created="20210601145954492" modified="20210601145955452" tags="CodeCafe" title="info">
-<pre></pre>
+<div created="20210602135709374" modified="20210602141508181" tags="" title="Home">
+<pre>{{CoffeeTabs}}
+
+---
+
+{{CodeCafe}}
+
+[img[Coffee1.jpg]]</pre>
+</div>
+<div created="20210601145954492" modified="20210602141243396" tags="CodeCafe" title="info">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'info'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210601141955749" modified="20210601142327187" tags="java iterator" title="Iterate through a HashMap - java" type="application/javascript">
 <pre>for (Map.Entry&lt;String, Object&gt; entry : map.entrySet()) {
@@ -11804,12 +11947,13 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210601143818789" modified="20210601143916365" tags="projects" title="LHD-RV">
+<div created="20210601143818789" modified="20210602140739893" tags="projects" title="LHD-RV">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
-&lt;&lt;toc-selective-expandable 'LHD-rv'&gt;&gt;
+&lt;&lt;toc-selective-expandable 'LHD-RV'&gt;&gt;
 
-&lt;/div&gt;</pre>
+&lt;/div&gt;
+</pre>
 </div>
 <div created="20210601144736883" modified="20210601150819389" tags="LHD-RV спецификация" title="LHD-RV микроконтроллер">
 <pre>!! 32-битный микроконтроллер с интерфейсом ISO/IEC 7816 для сим-карты
@@ -11838,10 +11982,17 @@ file:///X:/Doc/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B/RiscV/NE32
 Дамп может быть модифицируемым (RAM) или немодифицируемым (ROM, EEPROM). В модифицируемом дампе должна обеспечиваться возможность изменения содержимого любой ячейки памяти (байта или слова в зависимости от представления).
 </pre>
 </div>
-<div created="20210601143755626" modified="20210601143814517" tags="CodeCafe" title="projects">
+<div created="20210602110005583" modified="20210602141202821" tags="CodeCafe" title="meri">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
-&lt;&lt;toc-selective-expandable 'projects'&gt;&gt;
+&lt;&lt;toc-selective-expandable 'meri'&gt;&gt;
+
+&lt;/div&gt;</pre>
+</div>
+<div created="20210601143755626" modified="20210602140811381" tags="CodeCafe" title="projects">
+<pre>&lt;div class=&quot;zetab_inner&quot;&gt;
+
+&lt;&lt;tabs &quot;[tag[projects]!nsort[title]]&quot; &quot;LHD-RV&quot; &quot;$:/state/tab2&quot;  &quot;tc-vertical&quot;&gt;&gt;
 
 &lt;/div&gt;</pre>
 </div>
