Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -169,6 +169,14 @@ Error message and password prompt
 
 <li>$:/DefaultTiddlers</li>
 
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Path</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
 <li>$:/isEncrypted</li>
 
 <li>$:/palette</li>
@@ -10415,6 +10423,18 @@ Error message and password prompt
 <div created="20210601143655876" modified="20210602135804166" title="$:/DefaultTiddlers">
 <pre>Home</pre>
 </div>
+<div created="20210831123249187" modified="20210831123250626" title="$:/GitHub/Filename">
+<pre>cafe.html</pre>
+</div>
+<div created="20210831123257069" modified="20210831123257069" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
+<div created="20210831123240932" modified="20210831123245322" title="$:/GitHub/Repo">
+<pre>daidalvi/coffee</pre>
+</div>
+<div created="20210831123224794" modified="20210831123225866" title="$:/GitHub/Username">
+<pre>daidalvi</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
@@ -12049,8 +12069,8 @@ Error message and password prompt
 <div created="20210601141843923" modified="20210831112644542" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20210831112647182" modified="20210831112647182" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+<div created="20210831112647182" modified="20210831123216385" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
@@ -12238,7 +12258,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20210831123214131" list="$:/ControlPanel Home" modified="20210831123214131" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
