--- a/cafe.html
+++ b/cafe.html
@@ -12081,8 +12081,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831120040880" title="$:/state/tab2--2017306950">
-<pre>projects</pre>
+<div created="20210826160606675" modified="20210831123411922" title="$:/state/tab2--2017306950">
+<pre>meri</pre>
 </div>
 <div created="20210826160602899" modified="20210826161105283" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12258,7 +12258,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831123214131" list="$:/ControlPanel Home" modified="20210831123214131" title="$:/StoryList">
+<div created="20210831123214131" list="[[Turnkey Lamp]] Home" modified="20210831123413178" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13136,7 +13136,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 * {{Отображать тип проекта (LHD-RV) при генерации||checklist}}
 * {{В окне дампа памяти у Андрея появляется ошибка||checklist}}</pre>
 </div>
-<div created="20210826155246470" modified="20210831112457295" tags="virtualbox reg" title="Turnkey Lamp">
+<div created="20210826155246470" modified="20210831123426179" tags="virtualbox reg" title="Turnkey Lamp">
 <pre>Turnkey:
 Mysql, root: `Darjee74ling`
 
@@ -13146,7 +13146,8 @@ Xubuntu:
 login: zeid
 pass: 141410
 ```
-</pre>
+
+test</pre>
 </div>
 <div created="20210603091750286" modified="20210603091801951" tags="eclipse" title="views">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
