Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13136,7 +13136,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 * {{Отображать тип проекта (LHD-RV) при генерации||checklist}}
 * {{В окне дампа памяти у Андрея появляется ошибка||checklist}}</pre>
 </div>
-<div created="20210826155246470" modified="20210831123426179" tags="virtualbox reg" title="Turnkey Lamp">
+<div created="20210826155246470" modified="20210831123627570" tags="virtualbox reg" title="Turnkey Lamp">
 <pre>Turnkey:
 Mysql, root: `Darjee74ling`
 
@@ -13146,8 +13146,7 @@ Xubuntu:
 login: zeid
 pass: 141410
 ```
-
-test</pre>
+</pre>
 </div>
 <div created="20210603091750286" modified="20210603091801951" tags="eclipse" title="views">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
