--- a/cafe.html
+++ b/cafe.html
@@ -12081,8 +12081,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831123411922" title="$:/state/tab2--2017306950">
-<pre>meri</pre>
+<div created="20210826160606675" modified="20210831130237172" title="$:/state/tab2--2017306950">
+<pre>code</pre>
 </div>
 <div created="20210826160602899" modified="20210826161105283" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12090,7 +12090,7 @@ Error message and password prompt
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
 <pre>LHD-RV: дампы памяти</pre>
 </div>
-<div created="20210830101055416" modified="20210830101055416" title="$:/state/tab2-1422432489">
+<div created="20210830101055416" modified="20210831130238179" title="$:/state/tab2-1422432489">
 <pre>php</pre>
 </div>
 <div created="20210602141529428" modified="20210830112717716" title="$:/state/tab2-2058192071">
@@ -12258,7 +12258,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831123214131" list="[[Turnkey Lamp]] Home" modified="20210831123413178" title="$:/StoryList">
+<div created="20210831123214131" list="[[Установка Msgpack для php под Lamp debian в virtualbox]] [[Turnkey Lamp]] Home" modified="20210831130239691" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12719,7 +12719,7 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210830100842186" modified="20210830101232001" tags="php msgpack linux virtualbox" title="Установка Msgpack для php под Lamp debian в virtualbox">
+<div created="20210830100842186" modified="20210831130301251" tags="php msgpack linux virtualbox" title="Установка Msgpack для php под Lamp debian в virtualbox">
 <pre>Установка [[msgpack]] для [[php]]
 
 
@@ -12741,6 +12741,15 @@ var_dump($msg);
 
 $data = msgpack_unpack($msg);
 var_dump($data);
+
+
+echo &quot;&lt;hr /&gt;&quot;;
+
+$data = array(&quot;admin&quot;, &quot;admin&quot;);
+$msg = msgpack_pack($data);
+
+var_dump(bin2hex( $msg));
+
 ```
 
 </pre>
