--- a/cafe.html
+++ b/cafe.html
@@ -401,7 +401,7 @@ Error message and password prompt
 
 <li>задачи</li>
 
-<li>Криптосервер - handshake</li>
+<li>Криптосервер - handshake &amp; login</li>
 
 <li>Криптосервис</li>
 
@@ -12260,7 +12260,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831123214131" list="[[Криптосервер - handshake]] [[Установка Msgpack для php под Lamp debian в virtualbox]] [[Turnkey Lamp]] Home" modified="20210831130239691" title="$:/StoryList">
+<div created="20210831123214131" list="[[Криптосервер - handshake &amp; login]] [[Установка Msgpack для php под Lamp debian в virtualbox]] [[Turnkey Lamp]] Home" modified="20210831130239691" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12488,7 +12488,7 @@ Error message and password prompt
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831130316573" modified="20210831130351364" tags="php handshake" title="Криптосервер - handshake">
+<div created="20210831130316573" modified="20210831130506989" tags="php handshake" title="Криптосервер - handshake &amp; login">
 <pre>
 ```php
 &lt;?php 
