Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -281,6 +281,8 @@ Error message and password prompt
 
 <li>$:/state/toc/Пак Звезда-Криптосервис-1001580552</li>
 
+<li>$:/state/toc/Пак Звезда-Криптосервис-1587591595</li>
+
 <li>$:/state/toc/android-edoc--1150316071</li>
 
 <li>$:/state/toc/code-android-217132970</li>
@@ -12122,6 +12124,9 @@ Error message and password prompt
 <div created="20210826161033011" modified="20210826161033011" title="$:/state/toc/Пак Звезда-Криптосервис-1001580552">
 <pre>open</pre>
 </div>
+<div created="20210831130736004" modified="20210831130736004" title="$:/state/toc/Пак Звезда-Криптосервис-1587591595">
+<pre>open</pre>
+</div>
 <div created="20210602141537852" modified="20210826161849715" title="$:/state/toc/android-edoc--1150316071">
 <pre>open</pre>
 </div>
@@ -12260,7 +12265,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831130625069" list="[[Криптосервис - handshake &amp; login]] Home" modified="20210831130640156" title="$:/StoryList">
+<div created="20210831130625069" list="[[Пак Звезда]] Home [[Криптосервис - задачи]]" modified="20210831130751387" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12506,7 +12511,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" modified="20210831120720489" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<div created="20210831115833307" modified="20210831132005686" tags="задачи Криптосервис" title="Криптосервис - задачи">
 <pre>Все интерфейсы описаны в `src/apps/Zvezda/crypto_service/api`. 
 Там есть: 
 
@@ -12517,7 +12522,10 @@ Error message and password prompt
 
 Идентификаторы функций – это порядковый номер функций, начиная сверху. 
 
-Документ: `doc/utils/rpc/RPC Technology.docx` (Глава 2 Язык описания интерфейса)
+Документы `doc/utils/rpc/RPC`: 
+
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Technology.docx&lt;/a&gt;
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
 
 Основные функции:
 
