Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12511,7 +12511,7 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" modified="20210831132005686" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<div created="20210831115833307" modified="20210831132044381" tags="задачи Криптосервис" title="Криптосервис - задачи">
 <pre>Все интерфейсы описаны в `src/apps/Zvezda/crypto_service/api`. 
 Там есть: 
 
@@ -12522,9 +12522,9 @@ Error message and password prompt
 
 Идентификаторы функций – это порядковый номер функций, начиная сверху. 
 
-Документы `doc/utils/rpc/RPC`: 
+Документы `doc/utils/rpc`: 
 
-* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Technology.docx&lt;/a&gt;
+* &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/11gEqebJ5DZnJArUtad3bpxqDJeQXSZQx/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;RPC technology.docx&lt;/a&gt;
 * &lt;a target=&quot;_blank&quot; href=&quot;https://docs.google.com/document/d/1HtpwbORJq6kVyCH_CK1WvFi-DE5ziPNO/edit?usp=sharing&amp;ouid=115096596089886901273&amp;rtpof=true&amp;sd=true&quot;&gt;Примеры вызовов функций криптосервиса.docx&lt;/a&gt;
 
 Основные функции:
