--- a/cafe.html
+++ b/cafe.html
@@ -491,6 +491,8 @@ Error message and password prompt
 
 <li>python</li>
 
+<li>Python bytes&lt;-&gt;hex</li>
+
 <li>Python socket server</li>
 
 <li>Sigma-3</li>
@@ -12265,7 +12267,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831130625069" list="[[Пак Звезда]] Home [[Криптосервис - задачи]]" modified="20210831130751387" title="$:/StoryList">
+<div list="[[Python bytes&lt;-&gt;hex]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13147,6 +13149,26 @@ https://www.codeproject.com/Tips/418814/Socket-Programming-in-PHP</pre>
 &lt;&lt;toc-selective-expandable 'python'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210831134323553" modified="20210831134525765" tags="python hex" title="Python bytes&lt;-&gt;hex">
+<pre>Закодировать:
+
+```
+from binascii import hexlify
+hexlify(&quot;AdminService&quot;.encode())
+```
+`b'41646d696e53657276696365'
+`
+
+Раскодировать:
+
+```
+bytearray.fromhex(&quot;92a561646d696ea561646d696e&quot;)
+```
+`bytearray(b'\x92\xa5admin\xa5admin')`
+
+
+</pre>
 </div>
 <div created="20210826162333910" modified="20210826162402523" tags="python socket" title="Python socket server">
 <pre>```python
