--- a/cafe.html
+++ b/cafe.html
@@ -12098,8 +12098,8 @@ Error message and password prompt
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
 <pre>LHD-RV: дампы памяти</pre>
 </div>
-<div created="20210830101055416" modified="20210831134604316" title="$:/state/tab2-1422432489">
-<pre>php</pre>
+<div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
+<pre>python</pre>
 </div>
 <div created="20210602141529428" modified="20210830112717716" title="$:/state/tab2-2058192071">
 <pre>projects</pre>
@@ -13152,10 +13152,10 @@ https://www.codeproject.com/Tips/418814/Socket-Programming-in-PHP</pre>
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831134323553" modified="20210831134525765" tags="python hex" title="Python bytes&lt;-&gt;hex">
+<div created="20210831134323553" modified="20210831134713189" tags="python hex" title="Python bytes&lt;-&gt;hex">
 <pre>Закодировать:
 
-```
+```python
 from binascii import hexlify
 hexlify(&quot;AdminService&quot;.encode())
 ```
@@ -13164,7 +13164,7 @@ hexlify(&quot;AdminService&quot;.encode())
 
 Раскодировать:
 
-```
+```python
 bytearray.fromhex(&quot;92a561646d696ea561646d696e&quot;)
 ```
 `bytearray(b'\x92\xa5admin\xa5admin')`
