--- a/cafe.html
+++ b/cafe.html
@@ -417,6 +417,8 @@ Error message and password prompt
 
 <li>Подключение по сокету из гостевой машины к хосту</li>
 
+<li>Почта</li>
+
 <li>Проблема с дёрганием дизассемблера в LHD-RV</li>
 
 <li>разное</li>
@@ -12089,10 +12091,10 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831130237172" title="$:/state/tab2--2017306950">
-<pre>code</pre>
+<div created="20210826160606675" modified="20210831142107648" title="$:/state/tab2--2017306950">
+<pre>meri</pre>
 </div>
-<div created="20210826160602899" modified="20210826161105283" title="$:/state/tab2--2135597508">
+<div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
@@ -12269,7 +12271,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831134543989" list="[[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831134543989" title="$:/StoryList">
+<div created="20210831134543989" list="Почта [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831135007750" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12642,6 +12644,9 @@ https://stackoverflow.com/questions/19933550/how-to-connect-with-host-postgresql
 
 * [[Php socket client]]
 * [[Python socket server]]</pre>
+</div>
+<div created="20210831142111474" modified="20210831142136600" tags="meri reg" title="Почта">
+<pre>https://mail.niime.ru/owa/</pre>
 </div>
 <div created="20210603082221728" modified="20210603122736388" tags="task LHD-RV дизассемблер" title="Проблема с дёрганием дизассемблера в LHD-RV">
 <pre>`Суть проблемы`: дизассемблер возвращает некорректную позицию по адресу 16777216 (0x1000000)
