--- a/cafe.html
+++ b/cafe.html
@@ -12645,8 +12645,9 @@ https://stackoverflow.com/questions/19933550/how-to-connect-with-host-postgresql
 * [[Php socket client]]
 * [[Python socket server]]</pre>
 </div>
-<div created="20210831142111474" modified="20210831142143180" tags="meri reg" title="Почта">
-<pre>https://mail.niime.ru/owa/</pre>
+<div created="20210831142111474" modified="20210831142152112" tags="meri reg" title="Почта">
+<pre>https://mail.niime.ru/owa/
+33Iguanas</pre>
 </div>
 <div created="20210603082221728" modified="20210603122736388" tags="task LHD-RV дизассемблер" title="Проблема с дёрганием дизассемблера в LHD-RV">
 <pre>`Суть проблемы`: дизассемблер возвращает некорректную позицию по адресу 16777216 (0x1000000)
