Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12271,7 +12271,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831134543989" list="Почта [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831135007750" title="$:/StoryList">
+<div created="20210831134543989" list="Почта [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142220134" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12645,9 +12645,8 @@ https://stackoverflow.com/questions/19933550/how-to-connect-with-host-postgresql
 * [[Php socket client]]
 * [[Python socket server]]</pre>
 </div>
-<div created="20210831142111474" modified="20210831142152112" tags="meri reg" title="Почта">
-<pre>https://mail.niime.ru/owa/
-33Iguanas</pre>
+<div created="20210831142111474" modified="20210831142230319" tags="meri reg" title="Почта">
+<pre>https://mail.niime.ru/owa/</pre>
 </div>
 <div created="20210603082221728" modified="20210603122736388" tags="task LHD-RV дизассемблер" title="Проблема с дёрганием дизассемблера в LHD-RV">
 <pre>`Суть проблемы`: дизассемблер возвращает некорректную позицию по адресу 16777216 (0x1000000)
