Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -277,6 +277,8 @@ Error message and password prompt
 
 <li>$:/state/toc/задачи-todo-1729998577</li>
 
+<li>$:/state/toc/задачи-todo-2095279696</li>
+
 <li>$:/state/toc/Пак Звезда-Криптосервис--861590851</li>
 
 <li>$:/state/toc/Пак Звезда-Криптосервис-1001580552</li>
@@ -12091,8 +12093,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831142107648" title="$:/state/tab2--2017306950">
-<pre>meri</pre>
+<div created="20210826160606675" modified="20210831142251638" title="$:/state/tab2--2017306950">
+<pre>разное</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12122,6 +12124,9 @@ Error message and password prompt
 <pre>open</pre>
 </div>
 <div created="20210603095509143" modified="20210603095509143" title="$:/state/toc/задачи-todo-1729998577">
+<pre>open</pre>
+</div>
+<div created="20210831142248543" modified="20210831142248543" title="$:/state/toc/задачи-todo-2095279696">
 <pre>open</pre>
 </div>
 <div created="20210826160911243" modified="20210826160911243" title="$:/state/toc/Пак Звезда-Криптосервис--861590851">
@@ -12271,7 +12276,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831134543989" list="Почта [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142220134" title="$:/StoryList">
+<div created="20210831134543989" list="Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142253615" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13247,7 +13252,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 ```
 </pre>
 </div>
-<div created="20210601151030581" modified="20210601151134509" tags="разное" title="Sigma-3">
+<div created="20210601151030581" modified="20210831142313944" tags="разное" title="Sigma-3">
 <pre>* 25.02 
 * 27.03 
 * 25.04 
