--- a/cafe.html
+++ b/cafe.html
@@ -455,6 +455,8 @@ Error message and password prompt
 
 <li>CoffeeTabs</li>
 
+<li>Comment by '(anonymous)' on 'Sigma-3'</li>
+
 <li>crypto_service.ini</li>
 
 <li>eclipse</li>
@@ -12946,6 +12948,9 @@ a, a:visited{
 
 &lt;/div&gt;</pre>
 </div>
+<div created="20210831142315264" edit-mode="no" list="Sigma-3" modified="20210831142316807" role="comment" title="Comment by '(anonymous)' on 'Sigma-3'">
+<pre>33Iguanas</pre>
+</div>
 <div created="20210826160543457" modified="20210826160841084" tags="Криптосервис" title="crypto_service.ini">
 <pre>1) Нужно указать в настройках:
 se.type = software
@@ -13252,11 +13257,14 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 ```
 </pre>
 </div>
-<div created="20210601151030581" modified="20210831142313944" tags="разное" title="Sigma-3">
+<div created="20210601151030581" modified="20210831142415344" tags="разное" title="Sigma-3">
 <pre>* 25.02 
 * 27.03 
 * 25.04 
-* 25.05</pre>
+* 25.05
+* 22.06 
+* 20.07 
+* 17.08</pre>
 </div>
 <div created="20210603084626198" modified="20210603084634278" tags="CodeCafe" title="task">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
