--- a/cafe.html
+++ b/cafe.html
@@ -519,6 +519,8 @@ Error message and password prompt
 
 <li>zest</li>
 
+<li>Zest Comment Styles</li>
+
 </ul>
 </p>
 
@@ -12095,8 +12097,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" modified="20210831142251638" title="$:/state/tab2--2017306950">
-<pre>разное</pre>
+<div created="20210826160606675" modified="20210831142756640" title="$:/state/tab2--2017306950">
+<pre>zest</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12278,7 +12280,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831134543989" list="Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142253615" title="$:/StoryList">
+<div created="20210831134543989" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142757520" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13325,6 +13327,76 @@ pass: 141410
 &lt;&lt;toc-selective-expandable 'zest'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210831142804602" modified="20210831142830768" tags="zest $:/tags/Stylesheet" title="Zest Comment Styles">
+<pre>\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline
+
+.tc-is-comment-header {
+	padding: 0.25em;
+	border: 2px solid #282828;
+	border-radius: 4px;
+	background: #3c3836;
+}
+
+.tc-comments-segment {
+	border-top: 2px solid #282828;
+}
+
+.tc-comment-button button {
+	width: 100%;
+	text-align: right;
+}
+
+.tc-sidebar-scrollable .tc-comment-button button {
+	width: auto;
+	text-align: right;
+}
+
+.tc-comment-button button svg {
+	fill: #26cb56;
+	height: 2em;
+	width: 2em;
+}
+
+.tc-comments {
+}
+
+.tc-comment-list {
+	list-style: none;
+     padding-left: 0;
+}
+
+.tc-comment-list .tc-comments {
+	padding-left: 1em;
+}
+
+.tc-comment-entry {
+	position: relative;
+	border: 2px solid #32302f;
+	border-radius: 4px;
+	margin: 0.5em 0 0 0;
+	background: #3c3836;
+}
+
+.tc-comment-entry-heading {
+	font-size: 0.7em;
+	font-weight: bold;
+	text-transform: uppercase;
+	background: #282828;
+	color: #5B6D80;
+	padding: 0 0.5em;
+}
+
+.tc-comment-entry-body {
+	font-size: 0.8em;
+	padding: 0 0.5em;
+}
+
+.tc-comment-entry-body textarea {
+	font-size: 1.1em;
+	width: 100%
+}
+</pre>
 </div>
 
 
