Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13328,7 +13328,7 @@ pass: 141410
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831142804602" modified="20210831142830768" tags="zest $:/tags/Stylesheet" title="Zest Comment Styles">
+<div created="20210831142804602" modified="20210831143004288" tags="zest $:/tags/Stylesheet" title="Zest Comment Styles">
 <pre>\rules only filteredtranscludeinline transcludeinline macrodef macrocallinline
 
 .tc-is-comment-header {
@@ -13396,7 +13396,9 @@ pass: 141410
 	font-size: 1.1em;
 	width: 100%
 }
-</pre>
+.tc-comment-entry-heading a.tc-tiddlylink{
+    color: #d79921;
+		}</pre>
 </div>
 
 
