--- a/cafe.html
+++ b/cafe.html
@@ -377,6 +377,8 @@ Error message and password prompt
 
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
+<li>$:/status/UserName</li>
+
 <li>$:/StoryList</li>
 
 <li>$:/themes/tiddlywiki/centralised</li>
@@ -12082,17 +12084,17 @@ Error message and password prompt
 <div created="20210601141845283" modified="20210601151913507" title="$:/state/tab--86143343">
 <pre>$:/core/ui/ControlPanel/Plugins/Installed/Themes</pre>
 </div>
-<div created="20210601141843923" modified="20210831112644542" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210601141843923" modified="20210831143020647" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20210831112647182" modified="20210831123216385" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20210831112647182" modified="20210831143019991" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/General</pre>
 </div>
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20210601142236932" modified="20210826161028011" title="$:/state/tab/sidebar--595412856">
-<pre>CoffeeTabs</pre>
+<div created="20210601142236932" modified="20210831143010280" title="$:/state/tab/sidebar--595412856">
+<pre>$:/plugins/tiddlywiki/comments/sidebar</pre>
 </div>
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
@@ -12280,7 +12282,10 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210831134543989" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831142757520" title="$:/StoryList">
+<div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
+<pre>zeid</pre>
+</div>
+<div created="20210831134543989" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143015144" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
