Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -457,8 +457,6 @@ Error message and password prompt
 
 <li>CoffeeTabs</li>
 
-<li>Comment by '(anonymous)' on 'Sigma-3'</li>
-
 <li>crypto_service.ini</li>
 
 <li>eclipse</li>
@@ -518,6 +516,8 @@ Error message and password prompt
 <li>views</li>
 
 <li>virtualbox</li>
+
+<li>zeidmare</li>
 
 <li>zest</li>
 
@@ -12285,7 +12285,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143015144" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="zeidmare [[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143034536" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12955,9 +12955,6 @@ a, a:visited{
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831142315264" edit-mode="no" list="Sigma-3" modified="20210831142316807" role="comment" title="Comment by '(anonymous)' on 'Sigma-3'">
-<pre>33Iguanas</pre>
-</div>
 <div created="20210826160543457" modified="20210826160841084" tags="Криптосервис" title="crypto_service.ini">
 <pre>1) Нужно указать в настройках:
 se.type = software
@@ -13325,6 +13322,9 @@ pass: 141410
 &lt;&lt;toc-selective-expandable 'virtualbox'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210831142315264" creator="zeid" edit-mode="no" list="Sigma-3" modified="20210831143048425" modifier="zeid" role="comment" title="zeidmare">
+<pre>33Iguanas</pre>
 </div>
 <div created="20210604100636459" modified="20210826161556491" tags="CodeCafe" title="zest">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
