Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12285,7 +12285,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="zeidmare [[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143034536" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143055696" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13261,7 +13261,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 ```
 </pre>
 </div>
-<div created="20210601151030581" modified="20210831142415344" tags="разное" title="Sigma-3">
+<div created="20210601151030581" creator="zeid" modified="20210831143107024" modifier="zeid" tags="разное" title="Sigma-3">
 <pre>* 25.02 
 * 27.03 
 * 25.04 
