--- a/cafe.html
+++ b/cafe.html
@@ -517,7 +517,7 @@ Error message and password prompt
 
 <li>virtualbox</li>
 
-<li>zeidmare</li>
+<li>zeid</li>
 
 <li>zest</li>
 
@@ -12285,7 +12285,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Zest Comment Styles]] Sigma-3 todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143055696" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Zest Comment Styles]] Sigma-3 zeid todo [[Криптосервис - задачи]] [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143121303" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13323,7 +13323,7 @@ pass: 141410
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831142315264" creator="zeid" edit-mode="no" list="Sigma-3" modified="20210831143048425" modifier="zeid" role="comment" title="zeidmare">
+<div created="20210831143125434" creator="zeid" modified="20210831143127377" modifier="zeid" title="zeid">
 <pre>33Iguanas</pre>
 </div>
 <div created="20210604100636459" modified="20210826161556491" tags="CodeCafe" title="zest">
