--- a/cafe.html
+++ b/cafe.html
@@ -12289,7 +12289,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="$:/plugins/tiddlywiki/highlight [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143745185" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="$:/plugins/tiddlywiki/highlight [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143820144" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12535,8 +12535,8 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210831143815866" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
-<pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api]]. 
+<div created="20210831115833307" creator="zeid" modified="20210831143902209" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
 Там есть: 
 
 * app_service.zdl 
