Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -411,6 +411,8 @@ Error message and password prompt
 
 <li>Криптосервис - задачи</li>
 
+<li>Криптосервис - api</li>
+
 <li>Криптосервис - handshake &amp; login</li>
 
 <li>Облако тегов - 1</li>
@@ -12289,7 +12291,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="$:/plugins/tiddlywiki/highlight [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143820144" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="$:/plugins/tiddlywiki/highlight [[Криптосервис - задачи]] [[Криптосервис - api]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831143903393" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12560,6 +12562,9 @@ Error message and password prompt
 
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
 </pre>
+</div>
+<div created="20210831143909705" creator="zeid" modified="20210831143912065" modifier="zeid" tags="Криптосервис" title="Криптосервис - api">
+<pre></pre>
 </div>
 <div created="20210831130316573" modified="20210831130724005" tags="php handshake Криптосервис" title="Криптосервис - handshake &amp; login">
 <pre>```php
