Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12900,7 +12900,7 @@ var_dump(bin2hex( $msg));
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831143313296" creator="zeid" modified="20210831143813336" modifier="zeid" tags="zdl Криптосервис-zdl" title="AppService">
+<div created="20210831143313296" creator="zeid" modified="20210831143931449" modifier="zeid" tags="zdl [[Криптосервис - api]]" title="AppService">
 <pre>
 
 ```markdown
