Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12537,11 +12537,11 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210831143902209" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<div created="20210831115833307" creator="zeid" modified="20210831144010546" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
 <pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
 Там есть: 
 
-* app_service.zdl 
+* [[app_service.zdl|AppService]]
 * app_feedback.zdl
 * radio_service.zdl
 * radio_feedback.zdl 
